# BaseLib

./: .gitignore  ToDo.txt  config.json  docker-compose.yml  file_verification.py  installation.txt  load_data.py  load_helper.py  main.py  pyproject.toml  pytest.ini  sql.json
SQL/: response.db  sql_config.py  sql_connection.py  sql_helper.py
data_transformation/: export.py  structure_validation.py  table.py  transformation.py  value_validation.py
db/mysql/: .env  init.sql
db/postgres/: .env  init.sql
file_loader/: load_data.py
src/base_lib/SQL/: sql_config.py  sql_connection.py  sql_helper.py
src/base_lib/data_transformation/: export.py  table.py  transformation.py
src/base_lib/file_loader/: file_verification.py  load_data.py  load_helper.py
src/base_lib/logger_setup/: __init__.py  constants.py  misc.py  ownLogger.py
src/base_lib/utils/: regex.py
tests/: test_regex.py
tests/SQL/: conftest.py  test.db  test_ms_sql.py  test_sql_lite_helpers.py
tests/data_transformation/: conftest.py  test_export.py  test_structure_validation.py  test_table.py  test_transformation.py  test_value_validation.py
tests/load_data/: conftest.py  test_load.py  test_verification.py
tests/load_data/files/: data.csv  data.json  excel.xlsx  logs.jsonl  modified.txt  simple.txt
