[project]
name = "projectbase"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
